aws/projects/001-roman-numerals-converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  The Roman Numerals Converter Application aims to convert the given number to the Roman
  numerals. The application is to be coded in Python and deployed as a web application with
  Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service.

Resources:
  RomanNumeralsConverterSC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: mehmet_1_NVA
      SecurityGroupIds:
        - !Ref RomanNumeralsConverterSC
      Tags:                
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack   
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash

            yum update -y
            yum install python3 -y
            pip3 install flask
            yum install git -y
            mkdir templates
            sudo chmod -R 777 ./
            wget https://raw.githubusercontent.com/HasanKaval/Hasan_Cl_AWS_Repo/master/aws/projects/001-roman-numerals-converter/app.py
            cd templates
            wget https://raw.githubusercontent.com/HasanKaval/Hasan_Cl_AWS_Repo/master/aws/projects/001-roman-numerals-converter/templates/index.html
            wget https://raw.githubusercontent.com/HasanKaval/Hasan_Cl_AWS_Repo/master/aws/projects/001-roman-numerals-converter/templates/result.html
            cd ..
            python3 app.py
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter URL
